# backpack-prediction-challenge

./: .gitignore  README.md  backpack-prediction-challenge.ipynb  pyproject.toml
